Fix test setup